<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download_cloud"
        app:tint="@color/purple" />

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/button_name"
        android:textSize="@dimen/default_text_size"
        app:defaultAnimDuration="2000"
        app:defaultColor="@color/colorPrimary"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:ovalProgressColor="@color/colorAccent"
        app:progressColor="@color/colorPrimaryDark"
    />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectDownload"
            android:text="@string/glide_desc"
            style="@style/radio_button_style" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/loadApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_app_desc"
            style="@style/radio_button_style"
            android:onClick="selectDownload"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_desc"
            style="@style/radio_button_style"
            android:onClick="selectDownload"
            />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>